add icons to links on Team page, add iframe and styling to cards

--- a/team.html
+++ b/team.html
@@ -39,56 +39,59 @@
            <div class="team-card">
             <h3>Ebuka</h3>
             <img src="assets/images/team/team-ebuka.png" alt="photo of team member Ebuka">
-            <a href="https://github.com/Ebuka-martins" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-fetac-a724a86a/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/Ebuka-martins" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-software-development-a724a86a/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
-            <p>placeholder</p>
+            <p>Harp</p>
            </div>
            <div class="team-card">
             <h3>Gemma</h3>
             <img src="assets/images/team/team-gemma.png" alt="photo of team member Gemma">
-            <a href="https://github.com/GemmaButcher-dev" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/GemmaButcher-dev" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/gemma-butcher-4460041a3/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Violin</p>
            </div>
            <div class="team-card">
             <h3>Iryna</h3>
             <img src="assets/images/team/team-iryna.png" alt="photo of team member Iryna">
-            <a href="https://github.com/irasan" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/irasan" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Double Bass</p>
            </div>
            <div class="team-card">
             <h3>James</h3>
             <img src="assets/images/team/team-james.png" alt="photo of team member James">
-            <a href="https://github.com/broken-helix" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/broken-helix" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Saxophone</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/04daeztQJg7lyDDAHJ70rT?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
            </div>
            <div class="team-card">
             <h3>Kiree</h3>
             <img src="assets/images/team/team-kiree.png" alt="photo of team member Kiree">
-            <a href="" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="www.linkedin.com/in/kireebellamy" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/Swewi" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/kireebellamy/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Clarinet</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0lOK6rOFeZXaqw4SUP5U3o?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
            </div>
            <div class="team-card">
             <h3>Maria</h3>
             <img src="assets/images/team/team-maria.png" alt="photo of team member Maria">
-            <a href="https://github.com/maria-grozova" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/maria-grozova" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Harp</p>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2ZojUeggI1NzvwaU3CPJcy?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
            </div>
            <div class="team-card">
             <h3>Muhammed</h3>
             <img src="assets/images/team/team-muhammed.png" alt="photo of team member Muhammed">
-            <a href="https://github.com/md-ash-dot/" target="_blank" aria-label="Link to GitHub (opens in new tab)">GitHub</a>
-            <a href="https://www.linkedin.com/in/muhammed-ashfaaq/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)">LinkedIn</a>
+            <a href="https://github.com/md-ash-dot/" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+            <a href="https://www.linkedin.com/in/muhammed-ashfaaq/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
             <p>Favourite instrument:</p>
             <p>Flute</p>
            </div>
@@ -99,7 +102,8 @@
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
-
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/1f32015eb0.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
