--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -35,6 +35,9 @@
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
             </div>
+            <!--Hints-->
+            <button id="hint-btn" class="game-start">Show Hint</button>
+            <div id="hint" class="hint"></div>
             <div id="feedback" class="feedback"></div>
             <button id="next-btn" class="next-btn" disabled>Answer</button>
         </div>
