--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -44,8 +44,10 @@
             <div id="score-feedback"></div>
             <div id="past-scores"></div>
             <div class="replay-container">
-            <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play again</a>
-            <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
+                <a href="instrumentQuiz.html" class="game-start" aria-label="button to play instrument quiz again">Play
+                    again</a>
+                <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different
+                    game</a>
             </div>
         </div>
     </main>
@@ -55,7 +57,7 @@
 
     <!-- Scripts -->
     <script src="assets/js/instrumentQuestions.js"></script>
-    <script src="assets/js/instrumentQuiz.js"></script>     <!-- Quiz logic file -->
+    <script src="assets/js/instrumentQuiz.js"></script> <!-- Quiz logic file -->
 
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
