Increase time for showing feedback + small html changes

--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
     <header>
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
-            <nav class="nav-item">
+            <nav class="nav-item" role="navigation">
                 <a href="index.html"  aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" class="active" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
