--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -22,7 +22,7 @@
     <header>
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
-            <nav class="nav-item">
+            <nav class="nav-item" role="navigation">
                 <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
@@ -39,7 +39,7 @@
             <button id="hint-btn" class="game-start">Show Hint</button>
             <div id="hint" class="hint"></div>
             <div id="feedback" class="feedback"></div>
-            <button id="next-btn" class="next-btn" disabled>Answer</button>
+            <button id="next-btn" class="next-btn" tabindex="0" disabled>Answer</button>
         </div>
         <div id="result" class="result">
             <h2>Your final score is:</h2>
