--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -32,7 +32,7 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Sound Quiz Game</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" class="play-audio" onclick="playAudio()"><i
+            <button id="play-audio-btn" class="play-audio" aria-label="Play audio" onclick="playAudio()"><i
                 class="fa-solid fa-circle-play play-audio-btn"></i></button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
