--- a/404.html
+++ b/404.html
@@ -32,12 +32,11 @@
         <div class="welcome-container">
             <img class="welcome-image" src="assets/images/melomaniac-gold.webp" alt="text welcome to music trivia">
         </div>
-        <div class="404-container">
-            <h1 class="404-msg">Sorry we cant find what you are looking for. Lets get you Bach!</h1>
+        <div class="msg-container">
+            <h1>Sorry we cant find what you are looking for. Lets get you Bach!</h1><br>
             <a href="index.html" class="game-start"
             aria-label="button to return to homepage">
-            <img class="game-icon-start" src="assets/images/tone.png" alt="Image of music stave as an icon">
-            <span class="game-text">Take Me Bach</span></a>
+            <span class="msg-text">Take Me Home</span></a>
         </div>
     </main>
     <footer>
