--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -52,6 +52,7 @@
                     game</a>
             </div>
         </div>
+        <button id="mute-btn" class="mute-btn"><i class="fa-solid fa-volume-xmark"></i><br>Sound Off</button>
     </main>
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
