--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -50,6 +50,7 @@
                 <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
+        <button id="mute-btn" class="mute-btn"><i class="fa-solid fa-volume-xmark"></i><br>Sound Off</button>
     </main>
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
