--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -35,11 +35,12 @@
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
             </div>
-            <!--Hints-->
-            <button id="hint-btn" class="game-start">Show Hint</button>
-            <div id="hint" class="hint"></div>
             <div id="feedback" class="feedback"></div>
-            <button id="next-btn" class="next-btn" tabindex="0" disabled>Answer</button>
+            <div class="btn-container">
+                <button id="hint-btn" class="hint-btn">Show Hint</button>
+                <button id="next-btn" class="next-btn" tabindex="0" disabled>Answer</button>
+            </div>
+            <div id="hint" class="hint"></div>
         </div>
         <div id="result" class="result">
             <h2>Your final score is:</h2>
