Names of the quizzes

--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="quiz-container" class="quiz-container ">
-            <h1>Composer Quiz</h1>
+            <h1>Do you know your composers?</h1>
             <p id="question"></p>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
