--- a/instrumentQuiz.html
+++ b/instrumentQuiz.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="quiz-container" class="quiz-container">
-            <h1>Quiz Game</h1>
+            <h1>Can you guess the instrument from the description?</h1>
             <p id="question"></p>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
