--- a/popCultureQuiz.html
+++ b/popCultureQuiz.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="quiz-container" class="quiz-container ">
-            <h1>Pop Quiz Game</h1>
+            <h1>Can you work out where you have heard these before?</h1>
             <p id="question"></p>
             <button id="play-audio-btn" class="play-audio" aria-label="Play audio" onclick="playAudio()"><i
                     class="fa-solid fa-circle-play play-audio-btn"></i></button>
