--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div id="quiz-container" class="quiz-container ">
-            <h1>Sound Quiz Game</h1>
+            <h1>Can you guess the instrument?</h1>
             <p id="question"></p>
             <button id="play-audio-btn" class="play-audio" aria-label="Play audio" onclick="playAudio()"><i
                 class="fa-solid fa-circle-play play-audio-btn"></i></button>
