add paragraph on home page. add progress bar to game view. hide footer in game view

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <div class="welcome-container">
             <img class="welcome-image" src="assets/images/melomaniac-gold.webp" alt="text welcome to music trivia">
         </div>
+        <div class="description">
+            <p>Select a quiz topic to test your classical music knowledge</p>
+        </div>
         <div class="btn-game">
             <button id="start-game-pop" class="game-start openModalBtn"
                 data-title="Pop Culture Quiz" data-body="Test your knowledge of classical music featured in films! Click the 'Play' button 
