--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -50,9 +50,22 @@
                 <a href="index.html" class="game-start" aria-label="button to go to the home page">Select a different game</a>
             </div>
         </div>
+        <!-- Progress bar -->
+        <div class="progress-bar">
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+            <i class="fa-solid fa-music progress" aria-hidden="true"></i>
+        </div>
         <button id="mute-btn" class="mute-btn"><i class="fa-solid fa-volume-xmark"></i><br>Sound Off</button>
     </main>
-    <footer>
+    <footer class="hidden">
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
 
