display click here around play

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 then select the correct option from the four choices provided. Tune in and see how many you can guess!" data-url="soundQuiz.html"
                 aria-label="button to start sound game">
                 <img class="game-icon-start" src="assets/images/tone.png" alt="Image of music stave as an icon">
-                <span class="game-text">Instrument Sounds</span></button>
+                <span class="game-text">Sounds</span></button>
             <button id="start-game-composers" class="game-start openModalBtn" 
                 data-title="Composer Quiz" data-body="Discover the great composers of music! Answer questions about famous composers and their works. 
                 If you’re unsure, use the hint option for a clue. Test your knowledge and see if you can name them all!" data-url="composerQuiz.html"
