--- a/soundQuiz.html
+++ b/soundQuiz.html
@@ -32,8 +32,8 @@
         <div id="quiz-container" class="quiz-container ">
             <h1>Can you guess the instrument?</h1>
             <p id="question"></p>
-            <button id="play-audio-btn" class="play-audio" aria-label="Play audio" onclick="playAudio()"><i
-                class="fa-solid fa-circle-play play-audio-btn"></i></button>
+            <button id="play-audio-btn" class="play-audio play-text" aria-label="Play audio" onclick="playAudio()">Click <i
+                class="fa-solid fa-circle-play play-audio-btn"></i> Here</button>
             <audio id="audio-player" controls style="display:none;"></audio>
             <div id="options" class="options-container">
                 <!-- Options will be injected here -->
