--- a/composerQuiz.html
+++ b/composerQuiz.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Musicoligists can test their knowledge here">
+    <meta name="description" content="Melomaniacs can test their knowledge here!">
     <meta name="keywords"
         content="pop culture, soundtracks, quiz, knowledge, musical instruments, music, classical music, opera">
-    <title>Testing your musical knowledge</title>
+    <title>Melomaniacs Composers</title>
     <!-- stylesheet or sheets -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- favicon -->
