--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Musicoligists can test their knowledge here">
+    <meta name="description" content="Melomaniacs can test their knowledge here!">
     <meta name="keywords"
         content="pop culture, soundtracks, quiz, knowledge, musical instruments, music, classical music, opera">
     <title>404 Melomaniac</title>
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="welcome-container">
-            <img class="welcome-image" src="assets/images/melomaniac-gold.webp" alt="text welcome to music trivia">
+            <img class="welcome-image" src="assets/images/melomaniacs.webp" alt="text welcome to music trivia">
         </div>
         <div class="msg-container">
             <h1>Sorry we cant find what you are looking for. Lets get you Bach!</h1><br>
