validator fixes markup

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Melomaniacs can test their knowledge here!">
     <meta name="keywords"
@@ -34,7 +33,7 @@
     <header>
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
-            <nav class="nav-item" role="navigation">
+            <nav class="nav-item">
                 <a href="index.html" class="active" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
