--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
         <div class="nav-bar">
             <img id="logo" class="logo" src="assets/images/musiclogo.webp" alt="Logo for the game">
             <nav class="nav-item">
-                <a href="index.html"  aria-label="Link to Home Page (current page)">Home</a>
+                <a href="index.html" aria-label="Link to Home Page (current page)">Home</a>
                 <a href="team.html" class="active" aria-label="Link to Team Page(opens in the same tab)">Team</a>
             </nav>
         </div>
@@ -31,77 +31,132 @@
         <!-- Team page summary -->
         <div class="team-intro">
             <h2>Meet the Team</h2>
-            <p>The Empire Strikes Bach is a group of developers working together to create the ultimate music trivia quiz. Whether you are a true melomaniac or looking to learn more about classical music, we want to make this a fun experience for you.</p>
+            <p>The Empire Strikes Bach is a group of developers working together to create the ultimate music trivia
+                quiz. Whether you are a true melomaniac or looking to learn more about classical music, we want to make
+                this a fun experience for you.</p>
         </div>
         <!-- Team member cards -->
         <div class="team-cards">
-           <div class="team-card">
-            <h3>Ebuka</h3>
-            <img src="assets/images/team/team-ebuka.png" alt="photo of team member Ebuka">
-            <a href="https://github.com/Ebuka-martins" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-software-development-a724a86a/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Harp</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5a2lHMvRRwhQp2zSwtjNmq?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>Gemma</h3>
-            <img src="assets/images/team/team-gemma.png" alt="photo of team member Gemma">
-            <a href="https://github.com/GemmaButcher-dev" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/gemma-butcher-4460041a3/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Violin</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6xez71zpAqQ6N5i8E1jHlD?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>Iryna</h3>
-            <img src="assets/images/team/team-iryna.png" alt="photo of team member Iryna">
-            <a href="https://github.com/irasan" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Double Bass</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2YZmsX1eLeJmbkpyjd30ei?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>James</h3>
-            <img src="assets/images/team/team-james.png" alt="photo of team member James">
-            <a href="https://github.com/broken-helix" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Saxophone</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/04daeztQJg7lyDDAHJ70rT?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>Kiree</h3>
-            <img src="assets/images/team/team-kiree.png" alt="photo of team member Kiree">
-            <a href="https://github.com/Swewi" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/kireebellamy/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Clarinet</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0lOK6rOFeZXaqw4SUP5U3o?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>Maria</h3>
-            <img src="assets/images/team/team-maria.png" alt="photo of team member Maria">
-            <a href="https://github.com/maria-grozova" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Harp</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2ZojUeggI1NzvwaU3CPJcy?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
-           <div class="team-card">
-            <h3>Muhammed</h3>
-            <img src="assets/images/team/team-muhammed.png" alt="photo of team member Muhammed">
-            <a href="https://github.com/md-ash-dot/" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
-            <a href="https://www.linkedin.com/in/muhammed-ashfaaq/" target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>LinkedIn</a>
-            <p>Favourite instrument:</p>
-            <p>Flute</p>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2M2P1PVilOZFj91gw7czjy?utm_source=generator&theme=0" width="250" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-           </div>
+            <div class="team-card">
+                <h3>Ebuka</h3>
+                <img src="assets/images/team/team-ebuka.png" alt="photo of team member Ebuka">
+                <a href="https://github.com/Ebuka-martins" target="_blank"
+                    aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github"
+                        aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-software-development-a724a86a/"
+                    target="_blank" aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Harp</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/5a2lHMvRRwhQp2zSwtjNmq?utm_source=generator&theme=0"
+                    width="250" height="152" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>Gemma</h3>
+                <img src="assets/images/team/team-gemma.png" alt="photo of team member Gemma">
+                <a href="https://github.com/GemmaButcher-dev" target="_blank"
+                    aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github"
+                        aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/gemma-butcher-4460041a3/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Violin</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/6xez71zpAqQ6N5i8E1jHlD?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>Iryna</h3>
+                <img src="assets/images/team/team-iryna.png" alt="photo of team member Iryna">
+                <a href="https://github.com/irasan" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i
+                        class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/irynasanzhara/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Double Bass</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/2YZmsX1eLeJmbkpyjd30ei?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>James</h3>
+                <img src="assets/images/team/team-james.png" alt="photo of team member James">
+                <a href="https://github.com/broken-helix" target="_blank"
+                    aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github"
+                        aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/james-d-evans/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Saxophone</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/04daeztQJg7lyDDAHJ70rT?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>Kiree</h3>
+                <img src="assets/images/team/team-kiree.png" alt="photo of team member Kiree">
+                <a href="https://github.com/Swewi" target="_blank" aria-label="Link to GitHub (opens in new tab)"><i
+                        class="fa-brands fa-github" aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/kireebellamy/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Clarinet</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/0lOK6rOFeZXaqw4SUP5U3o?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>Maria</h3>
+                <img src="assets/images/team/team-maria.png" alt="photo of team member Maria">
+                <a href="https://github.com/maria-grozova" target="_blank"
+                    aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github"
+                        aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/maria-grozova/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Harp</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/2ZojUeggI1NzvwaU3CPJcy?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
+            <div class="team-card">
+                <h3>Muhammed</h3>
+                <img src="assets/images/team/team-muhammed.png" alt="photo of team member Muhammed">
+                <a href="https://github.com/md-ash-dot/" target="_blank"
+                    aria-label="Link to GitHub (opens in new tab)"><i class="fa-brands fa-github"
+                        aria-hidden="true"></i>GitHub</a>
+                <a href="https://www.linkedin.com/in/muhammed-ashfaaq/" target="_blank"
+                    aria-label="Link to LinkedIn (opens in new tab)"><i class="fa-brands fa-linkedin-in"
+                        aria-hidden="true"></i>LinkedIn</a>
+                <p>Favourite instrument:</p>
+                <p>Flute</p>
+                <iframe style="border-radius:12px; border: 0;"
+                    src="https://open.spotify.com/embed/track/2M2P1PVilOZFj91gw7czjy?utm_source=generator&theme=0"
+                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
+            </div>
         </div>
-
-
     </main>
+    
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
