completed validtor fix

--- a/team.html
+++ b/team.html
@@ -67,7 +67,7 @@
                 <p>Violin</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/6xez71zpAqQ6N5i8E1jHlD?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
@@ -83,7 +83,7 @@
                 <p>Double Bass</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/2YZmsX1eLeJmbkpyjd30ei?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
@@ -100,7 +100,7 @@
                 <p>Saxophone</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/04daeztQJg7lyDDAHJ70rT?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
@@ -116,7 +116,7 @@
                 <p>Clarinet</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/0lOK6rOFeZXaqw4SUP5U3o?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
@@ -133,7 +133,7 @@
                 <p>Harp</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/2ZojUeggI1NzvwaU3CPJcy?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
@@ -150,13 +150,13 @@
                 <p>Flute</p>
                 <iframe style="border-radius:12px; border: 0;"
                     src="https://open.spotify.com/embed/track/2M2P1PVilOZFj91gw7czjy?utm_source=generator&theme=0"
-                    width="250" height="152" frameBorder="0" allowfullscreen=""
+                    width="250" height="152" allowfullscreen=""
                     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
                     loading="lazy"></iframe>
             </div>
         </div>
     </main>
-    
+
     <footer>
         Created by The Empire Strikes Bach (Team 7) - Code Institute Hackathon, Classical Music Month
     </footer>
